# bezant

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SECURITY.md  deny.toml  docker-compose.yml  release-plz.toml  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  spec_quirk.md
.github/workflows/: audit.yml  ci.yml  docker.yml  docs.yml  release.yml
clients/typescript/: README.md  package.json  tsconfig.json
clients/typescript/docs/: ACHDetails.md  AUSExposureDetailsType.md  AbandonAccount.md  Account.md  AccountAttributes.md  AccountAttributesParent.md  AccountClose.md  AccountConfiguration.md  AccountConfigurationType.md  AccountData.md  AccountDetailsResponse.md  AccountManagementAccountsApi.md  AccountManagementBankingApi.md  AccountManagementReportsApi.md  AccountManagementRequests.md  AccountManagementRequestsPayload.md  AccountManagementUtilitiesApi.md  AccountRep.md  AccountStatusBulkResponse.md  AccountStatusRequest.md  AccountStatusResponse.md  AccountSummaryResponse.md  AccountSummaryResponseCashBalancesInner.md  AccountSupportType.md  AccreditedInvestor.md  AccreditedInvestorInformation.md  AchInstruction.md  AchInstructionClientAccountInfo.md  AckServerPromptRequest.md  AddAdditionalAccount.md  AddCLPCapability.md  AddEntity.md  AddLEVFXCapability.md  AddMiFIRData.md  AddNewUser.md  AddRelationship.md  AddTradingPermissions.md  Address.md  AdministratorContactPersonType.md  AdministratorType.md  (+746 more)
clients/typescript/src/: runtime.ts
clients/typescript/src/.openapi-generator/: FILES
clients/typescript/src/apis/: AccountManagementAccountsApi.ts  AccountManagementBankingApi.ts  AccountManagementReportsApi.ts  AccountManagementUtilitiesApi.ts  AuthorizationSSOSessionsApi.ts  AuthorizationTokenApi.ts  PreTradeComplianceRestrictionsApi.ts  TradingAccountsApi.ts  TradingAlertsApi.ts  TradingContractsApi.ts  TradingEventContractsApi.ts  TradingFAAllocationManagementApi.ts  TradingFYIsAndNotificationsApi.ts  TradingMarketDataApi.ts  TradingOAuth10aApi.ts  TradingOrdersApi.ts  TradingPortfolioAnalystApi.ts  TradingPortfolioApi.ts  TradingScannerApi.ts  TradingSessionApi.ts  TradingWatchlistsApi.ts  UtilitiesEchoApi.ts  index.ts
clients/typescript/src/models/: ACHDetails.ts  AUSExposureDetailsType.ts  AbandonAccount.ts  Account.ts  AccountAttributes.ts  AccountAttributesParent.ts  AccountClose.ts  AccountConfiguration.ts  AccountConfigurationType.ts  AccountData.ts  AccountDetailsResponse.ts  AccountManagementRequests.ts  AccountManagementRequestsPayload.ts  AccountRep.ts  AccountStatusBulkResponse.ts  AccountStatusRequest.ts  AccountStatusResponse.ts  AccountSummaryResponse.ts  AccountSummaryResponseCashBalancesInner.ts  AccountSupportType.ts  AccreditedInvestor.ts  AccreditedInvestorInformation.ts  AchInstruction.ts  AchInstructionClientAccountInfo.ts  AckServerPromptRequest.ts  AddAdditionalAccount.ts  AddCLPCapability.ts  AddEntity.ts  AddLEVFXCapability.ts  AddMiFIRData.ts  AddNewUser.ts  AddRelationship.ts  AddTradingPermissions.ts  Address.ts  AdministratorContactPersonType.ts  AdministratorType.ts  AdvancedOrderReject.ts  AdvisorWrapFeesType.ts  AffiliationDetailsType.ts  AgreementRevision.ts  (+725 more)
crates/bezant-api/: CHANGELOG.md  Cargo.toml  README.md
crates/bezant-api/src/: lib.rs
crates/bezant-cli/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
crates/bezant-cli/src/: main.rs
crates/bezant-cli/tests/: cli.rs
crates/bezant-core/: CHANGELOG.md  Cargo.toml  README.md
crates/bezant-core/examples/: health.rs  list_positions.rs  stream_quotes.rs
crates/bezant-core/src/: auth.rs  client.rs  error.rs  helpers.rs  jar.rs  lib.rs  ws.rs
crates/bezant-core/tests/: examples.rs  facade.rs
crates/bezant-core/tests/fixtures/: examples.json
crates/bezant-mcp/: CHANGELOG.md  Cargo.toml  README.md
crates/bezant-mcp/src/: lib.rs  main.rs
crates/bezant-mcp/tests/: tools.rs
crates/bezant-server/: CHANGELOG.md  Cargo.toml  README.md
crates/bezant-server/src/: error.rs  lib.rs  main.rs  routes.rs  state.rs
crates/bezant-server/src/events/: connector.rs  mod.rs  persistence.rs  ring.rs
crates/bezant-server/tests/: events_routes.rs  routes.rs
crates/bezant-spec/: CHANGELOG.md  Cargo.toml  README.md  ibkr-openapi-3.1.json  ibkr-openapi.json
crates/bezant-spec/src/: lib.rs
crates/bezant-spec/tests/: normalize_invariants.rs
docker/combined/: Dockerfile  entrypoint.sh
docker/cpapi-gateway/: Dockerfile  README.md  conf.yaml
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  contributing.md  introduction.md  license.md  quickstart.md  security.md
docs/src/internals/: codegen.md  normalisation.md  testing.md
docs/src/ops/: cloud.md  docker.md  pi-cloudflare.md  spec-upgrade.md
docs/src/reference/: changelog.md  roadmap.md  rustdoc.md
docs/src/usage/: cli.md  mcp.md  rust.md  server.md  typescript.md
relogin/: .env.example  README.md  index.ts  package-lock.json  package.json  tsconfig.json
relogin/systemd/: bezant-relogin.service  bezant-relogin.timer
scripts/: codegen-ts.sh  codegen.sh  extract-examples.py  normalize-spec.py  refresh-spec.sh  upgrade-to-3.1.py
watchdog/: README.md  index.ts  package-lock.json  package.json
watchdog/systemd/: bezant-watchdog.service  bezant-watchdog.timer
xtask/: Cargo.toml
xtask/src/: main.rs
