[workspace]
resolver = "2"
members = ["crates/bezant-spec", "crates/bezant-api", "crates/bezant-core", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/isaacrowntree/bezant"
homepage = "https://github.com/isaacrowntree/bezant"
authors = ["Isaac Rowntree <isaac@triptech.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "cookies", "rustls", "charset", "http2", "query", "form"] }
url = "2"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
