[workspace]
resolver = "2"
members = ["crates/bezant-spec", "crates/bezant-api", "crates/bezant-core", "crates/bezant-server", "crates/bezant-cli", "crates/bezant-mcp", "xtask"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
repository = "https://github.com/isaacrowntree/bezant"
homepage = "https://github.com/isaacrowntree/bezant"
authors = ["Isaac Rowntree <isaac@triptech.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "cookies", "rustls", "charset", "http2", "query", "form"] }
url = "2"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

# Workspace-wide lint floor. Crates can still deny stricter settings at
# their own `lib.rs`; this block sets the minimum every crate agrees on.
# Declaring `unsafe_code = "forbid"` here is a standing invariant — flip
# only with a workspace-level review, not a single-crate opt-out.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
# Lint groups must sit at a lower priority than specific lints in the
# same table so that a crate-level `#![allow(specific_lint)]` can still
# override them.
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
module_name_repetitions = "allow"
all = { level = "warn", priority = -1 }
