[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
progenitor = "0.13"
openapiv3 = "2"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
prettyplease = "0.2"
syn = { version = "2", features = ["full"] }
