[package]
name = "bezant-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Command-line tool for the IBKR Client Portal Web API (Bezant)"
keywords = ["ibkr", "interactive-brokers", "trading", "cli", "finance"]
categories = ["command-line-utilities", "finance"]
readme = "README.md"

[lints]
workspace = true

[[bin]]
name = "bezant"
path = "src/main.rs"

[dependencies]
bezant-core = { path = "../bezant-core", version = "0.1.0" }
bezant-api = { path = "../bezant-api", version = "0.1.0" }

anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
