[package]
name = "bezant-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Ergonomic facade over bezant-api: session keepalive, pagination, symbol resolution, typed errors for the IBKR CPAPI"
keywords = ["ibkr", "interactive-brokers", "trading", "finance", "api"]
categories = ["api-bindings", "finance"]
readme = "README.md"

[lib]
name = "bezant"
path = "src/lib.rs"

[dependencies]
bezant-api = { path = "../bezant-api", version = "0.1.0" }
anyhow = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
wiremock = "0.6"
serde_json = { workspace = true }
