[package]
name = "bezant-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Ergonomic facade over bezant-api: session keepalive, pagination, symbol resolution, typed errors for the IBKR CPAPI"
keywords = ["ibkr", "interactive-brokers", "trading", "finance", "api"]
categories = ["api-bindings", "finance"]
readme = "README.md"
documentation = "https://docs.rs/bezant-core"

[lib]
name = "bezant"
path = "src/lib.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
# Build all features so docs.rs renders the full surface. `--cfg docsrs`
# lets us later gate nightly-only doc markers like `#[doc(cfg(...))]` via
# `#[cfg_attr(docsrs, doc(cfg(feature = "...")))]` without breaking
# stable rustdoc.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bezant-api = { path = "../bezant-api", version = "0.3.0" }
# `bezant-api`'s generated client returns `anyhow::Result<T>` from every
# typed call. To keep `?` ergonomic across `auth.rs` / `helpers.rs` we
# accept anyhow as a required dep. Future: redrive helpers off
# `bezant_api`'s `Result` shape directly so anyhow can move to optional.
anyhow = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
# Direct rustls dep so the WS handshake can install a permissive
# verifier when the client was built with `accept_invalid_certs(true)`.
# Pinned to the same major version tokio-tungstenite uses to keep
# `Connector::Rustls(Arc<ClientConfig>)` types compatible.
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pki-types = "1"
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
wiremock = "0.6"
serde_json = { workspace = true }
