[package]
name = "bezant-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Model Context Protocol server exposing the IBKR CPAPI as MCP tools"
keywords = ["ibkr", "interactive-brokers", "mcp", "claude", "llm"]
categories = ["command-line-utilities", "finance"]
readme = "README.md"
documentation = "https://docs.rs/bezant-mcp"

[lib]
name = "bezant_mcp"
path = "src/lib.rs"

[[bin]]
name = "bezant-mcp"
path = "src/main.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bezant-core = { path = "../bezant-core", version = "0.3.1" }
bezant-api = { path = "../bezant-api", version = "0.3.1" }

anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
rmcp = { version = "1.5", features = ["server", "client", "macros", "transport-io", "schemars"] }
schemars = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util"] }
wiremock = "0.6"
