[package]
name = "bezant-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "HTTP sidecar exposing the bezant IBKR CPAPI client over REST"
keywords = ["ibkr", "interactive-brokers", "trading", "http", "sidecar"]
categories = ["command-line-utilities", "finance"]
readme = "README.md"

[lib]
name = "bezant_server"
path = "src/lib.rs"

[[bin]]
name = "bezant-server"
path = "src/main.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bezant-core = { path = "../bezant-core", version = "0.1.0" }
bezant-api = { path = "../bezant-api", version = "0.1.0" }

anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "net"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
wiremock = "0.6"
